--- a/frontend html & css/index.html
+++ b/frontend html & css/index.html
@@ -3,7 +3,9 @@
   
 <head> 
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
-    <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/movie-item.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/header.css" media="all" rel="stylesheet" type="text/css" />
 </head>
     
     
