--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+	<link rel="stylesheet" type="text/css" href="vendor/jquery.mmenu.all.css">
 	<link rel="stylesheet" type="text/css" href="css/video-js.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<link rel="stylesheet" type="text/css" href="css/animation.css">
@@ -37,6 +38,7 @@
 	<script id="initializing-tpl" src="templates/initializing.tpl" type="text/x-template"></script>
 	<script id="about-tpl" src="templates/about.tpl" type="text/x-template"></script>
 	<script id="help-tpl" src="templates/help.tpl" type="text/x-template"></script>
+	<script id="help-tpl" src="templates/menu.tpl" type="text/x-template"></script>
 	
 	<!-- 3rd party Dependencies -->
 	<script src="vendor/jquery/dist/jquery.js"></script>
@@ -60,6 +62,8 @@
 	<script src="vendor/videojsplugins.js"></script>
 	<script src="vendor/dragwindow.js"></script>
 	<script src="vendor/videojs-youtube/src/youtube.js"></script>
+	<!-- dependencie to menu -->
+	<script src="vendor/dragwindow.js"></script>
 
 	<!-- App Initialization -->
 	<script src="database.js"></script>
@@ -68,7 +72,7 @@
 	<script src="lib/config.js"></script>
 	<script src="updater.js"></script>
 	<!--<script src="language.js"></script>-->
-	<script src="lib/streamer-web.js"></script>
+	<script src="vendor/jquery.mmenu.js"></script>
 
 	<!-- Backbone Models -->
 	<script src="lib/models/filter.js"></script>
