--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
-	<link rel="stylesheet" type="text/css" href="vendor/jquery.mmenu.all.css">
+	<link rel="stylesheet" type="text/css" href="vendor/jquery-mmenu/source/jquery.mmenu.all.css">
+
 	<link rel="stylesheet" type="text/css" href="css/video-js.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 	<link rel="stylesheet" type="text/css" href="css/animation.css">
@@ -72,7 +73,7 @@
 	<script src="lib/config.js"></script>
 	<script src="updater.js"></script>
 	<!--<script src="language.js"></script>-->
-	<script src="vendor/jquery.mmenu.js"></script>
+	<script src="vendor/jquery-mmenu/source/jquery.mmenu.min.js"></script>
 
 	<!-- Backbone Models -->
 	<script src="lib/models/filter.js"></script>
