--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -71,6 +71,7 @@
 	<script src="app.js"></script>
 	<script src="lib/config.js"></script>
 	<script src="updater.js"></script>
+	<script src="lib/streamer-web.js"></script>
 	<!--<script src="language.js"></script>-->
 	<script src="vendor/jquery-mmenu/source/jquery.mmenu.min.js"></script>
 
