Make sure backend is ready before to launch the app

--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -68,6 +68,7 @@
 	<!-- App Initialization -->
 	<script src="database.js"></script>
 	<script src="settings.js"></script>
+	<script src="backend.js"></script>
 	<script src="app.js"></script>
 	<script src="lib/config.js"></script>
 	<script src="updater.js"></script>
