--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -54,7 +54,7 @@
     <script src="vendor/moment/moment.js"></script>
     <script src="vendor/nedb/browser-version/out/nedb.js"></script>
     <script src="vendor/querystring/querystring.js"></script>
-    <script src="lib/vendor/uri.js"></script>
+    <script src="vendor/uri.js"></script>
 	<script src="vendor/videojs/dist/video-js/video.dev.js"></script>
 
 	<!-- Other dependencies -->
