--- a/frontend-html/index.html
+++ b/frontend-html/index.html
@@ -6,6 +6,7 @@
     <link href="css/movie-item.css" media="all" rel="stylesheet" type="text/css" />
     <link href="css/main.css" media="all" rel="stylesheet" type="text/css" />
     <link href="css/header.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/menu.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 
 
@@ -38,10 +39,28 @@
             <div class="popcorn-movie-seperator"></div>
 
         </div>
-
+    
     </div>
 
-
+    <div class="menu-overlay"></div>
+    <div class="menu">
+        <ul>
+            <li class="selected">Movies</li>
+            <li>Tv Series</li>
+            <li>Genre</li>
+                <ul class="menu-genre">
+                    <li>Action</li>
+                    <li>Action</li>
+                    <li>Action</li>
+                    <li>Action</li>
+                    <li>Action</li>
+                </ul>
+            <li>Sort By</li>
+            <li>Bookmarks</li>
+            <li>Setting</li>
+            <li>Info</li>
+        </ul>
+    </div>
 
 </body>
 
