--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -41,8 +41,12 @@
 	<script id="help-tpl" src="templates/help.tpl" type="text/x-template"></script>
 	<script id="help-tpl" src="templates/menu.tpl" type="text/x-template"></script>
 	
+	<!-- cordova used on mobile only-->
+    <script src="cordova.js"></script>
+	
 	<!-- 3rd party Dependencies -->
-	<script src="vendor/jquery/dist/jquery.js"></script>
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/jquery-mobile-bower/js/jquery.mobile-1.4.2.min.js"></script>
 	<script src="vendor/underscore/underscore.js"></script>
 	<script src="vendor/backbone/backbone.js"></script>
 	<script src="vendor/backbone.wreqr/lib/backbone.wreqr.js"></script>
