fix effect on sub menu

--- a/frontend-html/index.html
+++ b/frontend-html/index.html
@@ -79,7 +79,8 @@
             $(".sub-menu").animate({right: 0}, 500);
         });
          $(".menu").on("click tap", function(e){
-            if ($(".sub-menu").css("right") == "0") {
+            console.log($(".sub-menu").css("right"));
+            if ($(".sub-menu").css("right") == "0px") {
                 $(".sub-menu").animate({right: "-230px"}, 500);
             };
         })
