Added settings.html to frontend-html

--- a/frontend-html/index.html
+++ b/frontend-html/index.html
@@ -38,7 +38,7 @@
                 <li class="genre-sub-menu">Genre</li>
                 <li>Sort By</li>
                 <li>Bookmarks</li>
-                <li>Setting</li>
+                <li><a href="settings.html">Setting</a></li>
                 <li>Info</li>
             </ul>
             <div class="sub-menu">
