--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -45,8 +45,7 @@
     <script src="cordova.js"></script>
 	
 	<!-- 3rd party Dependencies -->
-	<script src="vendor/jquery/jquery.min.js"></script>
-	<script src="vendor/jquery-mobile-bower/js/jquery.mobile-1.4.2.min.js"></script>
+	<script src="vendor/jquery/jquery.js"></script>
 	<script src="vendor/underscore/underscore.js"></script>
 	<script src="vendor/backbone/backbone.js"></script>
 	<script src="vendor/backbone.wreqr/lib/backbone.wreqr.js"></script>
@@ -77,8 +76,6 @@
 	<script src="lib/config.js"></script>
 	<script src="updater.js"></script>
 	<script src="lib/streamer-web.js"></script>
-	<!--<script src="language.js"></script>-->
-	<script src="vendor/jquery-mmenu/source/jquery.mmenu.min.js"></script>
 
 	<!-- Backbone Models -->
 	<script src="lib/models/filter.js"></script>
