Added query mobile
And a quick test with loading element !

--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.css">	
+	<link rel="stylesheet"  type="text/css" href="vendor/jquery-mobile-bower/css/jquery.mobile-1.4.2.css">
 
 	<link rel="stylesheet" type="text/css" href="css/video-js.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
@@ -45,6 +46,7 @@
 	
 	<!-- 3rd party Dependencies -->
 	<script src="vendor/jquery/jquery.js"></script>
+	<script src="vendor/jquery-mobile-bower/js/jquery.mobile-1.4.2.js"></script>
 	<script src="vendor/underscore/underscore.js"></script>
 	<script src="vendor/backbone/backbone.js"></script>
 	<script src="vendor/backbone.wreqr/lib/backbone.wreqr.js"></script>
