--- a/frontend-html/settings.html
+++ b/frontend-html/settings.html
@@ -27,9 +27,9 @@
                         <div class="dropdown subtitles-language">
                             <label for="language">Default Language:</label>
                             <select name="language" id="language">
-                                <option value="">English</option>
-                                <option value="">Català</option>
-                                <option value="">Português (Brasil)</option>
+                                <option value="English">English</option>
+                                <option value="Catala">Català</option>
+                                <option value="Portugues (Brasil)">Portugues (Brasil)</option>
                             </select>
 
                             <div class="dropdown-arrow"></div>
@@ -39,7 +39,7 @@
                     <div>
                         <h3>Movies</h3>
                         <input name="movie-quality" id="movie-quality" type="checkbox">
-                        <label class="label" for="movie-quality">Show movie quality on list</label>
+                        <label class="label" for="movie-quality" id="show-quality">Show movie quality on list</label>
 
                         <div class="dropdown movies-quality">
                             <label for="movies-quality">Only list movies in:</label>
@@ -104,11 +104,11 @@
                         </div><!-- .mob -->
 
                         <label for="cache-directory" class="label-cache">Cache Directory:</label>
-                        <input type="text" name="fake-cache" id="fake-cache" class="fake-cache" value="/var/folders/gc/09r89/T/Popcorn-Time" readonly>
-                        <input type="file" name="cache-directory" id="cache-directory" class="cache-directory" value="/var/folders/gc/09r89/T/Popcorn-Time" nwdirectory>
+                        <input type="text" name="fake-cache" id="fake-cache" class="fake-cache" value="" readonly>
+                        <input type="file" name="cache-directory" id="cache-directory" class="cache-directory" value="" nwdirectory>
 
                         <input class="clear-tmp" name="clear-tmp" id="clear-tmp" type="checkbox">
-                        <label for="clear-tmp" class="label checked">Clear Tmp Folder after closing app?</label>
+                        <label for="clear-tmp" class="label checked" id="tmp-folder">Clear Tmp Folder after closing app?</label>
                     </div>
 
                     <div class="btns">
@@ -121,6 +121,8 @@
 
             </div><!-- .settings-container-->
         </div><!-- .main-container-->
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="vendor/jquery.min.js"></script>
+        <script type="text/javascript" src="vendor/hammer.min.js"></script>
+        <script type="text/javascript" src="js/views/settings.js"></script>
     </body>
 </html>
