--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -4,49 +4,33 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.css">	
-	<link rel="stylesheet"  type="text/css" href="vendor/jquery-mobile-bower/css/jquery.mobile-1.4.2.css">
 
-	<link rel="stylesheet" type="text/css" href="css/video-js.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" type="text/css" href="css/video-js.css">
 	<link rel="stylesheet" type="text/css" href="css/animation.css">
 </head>
 <body>
+
 	<div class="main-window-region"></div>
 
 	<script id="movie-error-tpl" src="templates/movie-error.tpl" type="text/x-template"></script>
+	<script id="movie-detail-tpl" src="templates/movie-detail.tpl" type="text/x-template"></script>
 	<script id="movie-item-tpl" src="templates/movie-item.tpl" type="text/x-template"></script>
-	<script id="show-item-tpl" src="templates/show-item.tpl" type="text/x-template"></script>
-	<script id="favorite-item-tpl" src="templates/favorite-item.tpl" type="text/x-template"></script>
 	<script id="movie-list-tpl" src="templates/movie-list.tpl" type="text/x-template"></script>
-	<script id="show-list-tpl" src="templates/show-list.tpl" type="text/x-template"></script>
-	<script id="favorite-list-tpl" src="templates/favorite-list.tpl" type="text/x-template"></script>
 	<script id="main-window-tpl" src="templates/main-window.tpl" type="text/x-template"></script>
 	<script id="movie-browser-tpl" src="templates/movie-browser.tpl" type="text/x-template"></script>
-	<script id="show-browser-tpl" src="templates/show-browser.tpl" type="text/x-template"></script>
-	<script id="favorite-browser-tpl" src="templates/favorite-browser.tpl" type="text/x-template"></script>
-	<script id="changelog-tpl" src="templates/changelog.tpl" type="text/x-template"></script>
-	<script id="disclaimer-tpl" src="templates/disclaimer.tpl" type="text/x-template"></script>
 	<script id="filter-bar-movie-tpl" src="templates/filter-bar-movie.tpl" type="text/x-template"></script>
-	<script id="settings-container-tpl" src="templates/settings-container.tpl" type="text/x-template"></script>
-	<script id="filter-bar-show-tpl" src="templates/filter-bar-show.tpl" type="text/x-template"></script>
-	<script id="filter-bar-favorite-tpl" src="templates/filter-bar-favorite.tpl" type="text/x-template"></script>
-	<script id="filter-bar-about-tpl" src="templates/filter-bar-about.tpl" type="text/x-template"></script>
 	<script id="header-tpl" src="templates/header.tpl" type="text/x-template"></script>
-	<script id="movie-detail-tpl" src="templates/movie-detail.tpl" type="text/x-template"></script>
-	<script id="show-detail-tpl" src="templates/show-detail.tpl" type="text/x-template"></script>
 	<script id="player-tpl" src="templates/player.tpl" type="text/x-template"></script>
 	<script id="loading-tpl" src="templates/loading.tpl" type="text/x-template"></script>
 	<script id="initializing-tpl" src="templates/initializing.tpl" type="text/x-template"></script>
-	<script id="about-tpl" src="templates/about.tpl" type="text/x-template"></script>
-	<script id="help-tpl" src="templates/help.tpl" type="text/x-template"></script>
-	<script id="help-tpl" src="templates/menu.tpl" type="text/x-template"></script>
+	<script id="menu-tpl" src="templates/menu.tpl" type="text/x-template"></script>
 	
 	<!-- cordova used on mobile only-->
     <script src="cordova.js"></script>
 	
 	<!-- 3rd party Dependencies -->
 	<script src="vendor/jquery/jquery.js"></script>
-	<script src="vendor/jquery-mobile-bower/js/jquery.mobile-1.4.2.js"></script>
 	<script src="vendor/underscore/underscore.js"></script>
 	<script src="vendor/backbone/backbone.js"></script>
 	<script src="vendor/backbone.wreqr/lib/backbone.wreqr.js"></script>
@@ -70,7 +54,6 @@
 	<script src="vendor/dragwindow.js"></script>
 
 	<!-- App Initialization -->
-	<script src="database.js"></script>
 	<script src="settings.js"></script>
 	<script src="backend.js"></script>
 	<script src="app.js"></script>
@@ -83,31 +66,21 @@
 	<script src="lib/models/movie.js"></script>
 	<script src="lib/models/movie_collection.js"></script>
 	<script src="lib/models/stream_info.js"></script>
-	<script src="lib/models/show_collection.js"></script>
-	<script src="lib/models/favorite_collection.js"></script>
 
 	<!-- Data Sources -->
 	<script src="lib/cache.js"></script>
+	
 	<script src="lib/providers/cache_provider.js"></script>
 	<script src="lib/providers/ysubs.js"></script>
 	<script src="lib/providers/trakttv.js"></script>
 	<script src="lib/providers/yts.js"></script>
-	<script src="lib/providers/eztv.js"></script>
-	<script src="lib/providers/favorites.js"></script>
-	<!--<script src="lib/providers/opensubtitles.js"></script>-->
 
 	<!-- Backbone Views and Controllers -->
-	<script src="lib/views/title_bar.js"></script>
 	<script src="lib/views/main_window.js"></script>
-
 	<script src="lib/views/movie_detail.js"></script>
-	<script src="lib/views/show_detail.js"></script>
 
-	<script src="lib/views/settings.js"></script>
 	<script src="lib/views/init_modal.js"></script>
-	<script src="lib/views/disclaimer.js"></script>
 	<script src="lib/views/about.js"></script>
-	<script src="lib/views/help.js"></script>
 	<script src="lib/views/player/loading.js"></script>
 	<script src="lib/views/player/player.js"></script>
 
@@ -115,16 +88,6 @@
 	<script src="lib/views/movie_browser/filter_bar.js"></script>
 	<script src="lib/views/movie_browser/movie_item.js"></script>
 	<script src="lib/views/movie_browser/movie_list.js"></script>
-
-	<script src="lib/views/show_browser/filter_bar.js"></script>
-	<script src="lib/views/show_browser/show_browser.js"></script>
-	<script src="lib/views/show_browser/show_item.js"></script>
-	<script src="lib/views/show_browser/show_list.js"></script>
-
-	<script src="lib/views/favorites/favorite_browser.js"></script>
-	<script src="lib/views/favorites/filter_bar.js"></script>
-	<script src="lib/views/favorites/favorite_item.js"></script>
-	<script src="lib/views/favorites/favorite_list.js"></script>
 	
 	<script src="bootstrap.js"></script>
 </body>
