continue work on movie detail recode

--- a/frontend-html/movie-detail-recode.html
+++ b/frontend-html/movie-detail-recode.html
@@ -14,15 +14,22 @@
 
         <div class="movie-backdrop">
 
+        <div class="movie-btn-watch"> 
+            <div class="play-icon"> </div>
+            </div>    
+            
+            
             <div class="movie-meta-backround">
 
                 <div class="movie-meta-container">
 
                     <div class="movie-meta-title">Non-Stop</div>
 
+                    <div class="movie-details-container"> 
                     <div class="movie-meta-details">2014</div>
                     <div class="movie-meta-dot"></div>
-                    <div class="movie-meta-details">2014</div>
+                    <div class="movie-meta-details">106 min</div>
+                    </div>
                 </div>
 
             </div>
