--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -22,8 +22,7 @@
 	<script id="movie-list-tpl" src="templates/movie-list.tpl" type="text/x-template"></script>
 	<script id="main-window-tpl" src="templates/main-window.tpl" type="text/x-template"></script>
 	<script id="movie-browser-tpl" src="templates/movie-browser.tpl" type="text/x-template"></script>
-	<script id="filter-bar-movie-tpl" src="templates/filter-bar-movie.tpl" type="text/x-template"></script>
-	<script id="header-tpl" src="templates/header.tpl" type="text/x-template"></script>
+	<script id="movie-list-header-tpl" src="templates/movie-list-header.tpl" type="text/x-template"></script>
 	<script id="player-tpl" src="templates/player.tpl" type="text/x-template"></script>
 	<script id="loading-tpl" src="templates/loading.tpl" type="text/x-template"></script>
 	<script id="initializing-tpl" src="templates/initializing.tpl" type="text/x-template"></script>
@@ -31,8 +30,8 @@
 	<!-- Ratchet -->
 	<script src="vendor/ratchet2/js/ratchet.min.js"></script>
 
-	<!-- Cordova used on mobile only -->
-	<script src="cordova.js"></script>
+	<!-- Cordova used on mobile only
+	<script src="cordova.js"></script> 
 
 	<!-- 3rd party Dependencies -->
 	<script src="vendor/jquery/dist/jquery.js"></script>
