oopes uncomment cordova.js from html

--- a/frontend/www/index.html
+++ b/frontend/www/index.html
@@ -30,7 +30,7 @@
 	<!-- Ratchet -->
 	<script src="vendor/ratchet2/js/ratchet.min.js"></script>
 
-	<!-- Cordova used on mobile only
+	<!-- Cordova used on mobile only -->
 	<script src="cordova.js"></script> 
 
 	<!-- 3rd party Dependencies -->
