--- a/frontend-html/Movies-Home v0.2/Movies Home v2.html
+++ b/frontend-html/Movies-Home v0.2/Movies Home v2.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Popcorn Time</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/ratchet.min.css">
     <link rel="stylesheet" href="css/ratchet-theme-android.min.css">
     <link rel="stylesheet" href="css/app.css">
